--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         </div> </div> <script>
         // Arduinoスケッチで設定したUUIDをここに記述
         // 必ずご自身のUUIDに置き換えてください！
-        const SERVICE_UUID = 'YOUR_SERVICE_UUID_HERE'; // 例: '19b10000-e8f2-537e-4f6c-d104768a1214' (小文字)
-        const TEMPERATURE_CHARACTERISTIC_UUID = 'YOUR_TEMP_CHAR_UUID_HERE'; // 例: '19b10001-e8f2-537e-4f6c-d104768a1214'
-        const PRESSURE_CHARACTERISTIC_UUID = 'YOUR_PRESS_CHAR_UUID_HERE'; // 例: '19b10002-e8f2-537e-4f6c-d104768a1214'
+        const SERVICE_UUID = '93c51ed2-cfe3-409c-a0f2-c41b2bb9fca3'; // 例: '19b10000-e8f2-537e-4f6c-d104768a1214' (小文字)
+        const TEMPERATURE_CHARACTERISTIC_UUID = 'bb3626f1-393f-486d-9a94-0700ee1c88ac'; // 例: '19b10001-e8f2-537e-4f6c-d104768a1214'
+        const PRESSURE_CHARACTERISTIC_UUID = 'c72e0888-651b-4a83-8b69-4b124ee8ad21'; // 例: '19b10002-e8f2-537e-4f6c-d104768a1214'
 
         let sensorDevice;
         let temperatureChar;
