--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
 
         // グラフ関連の変数
         const CHART_DURATION_SECONDS = 20; // グラフの表示期間（秒）
-        // データ取得が頻繁でない場合でも、古いデータを確実に削除するためのタイマー
         const CLEANUP_INTERVAL_MS = 1000; // 1秒ごとに古いデータをチェックして削除
 
         let temperatureData = []; // データ形式: { x: timestamp(ms), y: value }
@@ -313,6 +312,7 @@
             document.getElementById('connectButton').onclick = connectDevice;
 
             // 定期的に古いデータを削除し、グラフのX軸を更新するタイマーを開始
+            // このタイマーはsensorChartが初期化された後にのみ実行される
             setInterval(updateChartRangeAndCleanup, CLEANUP_INTERVAL_MS);
         });
 
@@ -368,7 +368,9 @@
             pressureData = [];
             latestTemperature = null;
             latestPressure = null;
-            sensorChart.update();
+            if (sensorChart) { // ★追加: 初期化されているかチェック
+                sensorChart.update();
+            }
         }
 
         function handleTemperatureNotifications(event) {
@@ -376,8 +378,10 @@
             const temperature = value.getFloat32(0, true);
             document.getElementById('tempValue').textContent = temperature.toFixed(2);
             latestTemperature = temperature; // 最新の温度を更新
-            // データが揃っていればグラフを更新。揃っていなくても、latestPressureがnullならそちらのデータは追加されない
-            updateChartData(new Date().getTime(), latestTemperature, latestPressure);
+
+            if (sensorChart) { // ★変更点★ sensorChartが初期化されているかチェック
+                updateChartData(new Date().getTime(), latestTemperature, latestPressure);
+            }
         }
 
         function handlePressureNotifications(event) {
@@ -385,8 +389,10 @@
             const pressure = value.getFloat32(0, true);
             updateMeter(pressure, PRESS_MIN_VALUE, PRESS_MAX_VALUE, 'pressNeedle', 'pressValue');
             latestPressure = pressure; // 最新の油圧を更新
-            // データが揃っていればグラフを更新。揃っていなくても、latestTemperatureがnullならそちらのデータは追加されない
-            updateChartData(new Date().getTime(), latestTemperature, latestPressure);
+
+            if (sensorChart) { // ★変更点★ sensorChartが初期化されているかチェック
+                updateChartData(new Date().getTime(), latestTemperature, latestPressure);
+            }
         }
 
         function updateMeter(value, minValue, maxValue, needleId, valueId) {
@@ -406,13 +412,19 @@
             temperatureData.push({ x: timestamp, y: temp });
             pressureData.push({ x: timestamp, y: press });
 
-            // 古いデータを削除とX軸の表示範囲更新を定期実行に任せる
-            // ここではデータの追加とChart.jsの更新のみ行う
-            sensorChart.update('none'); // 'none'を指定するとアニメーションなしで更新
+            // updateChartRangeAndCleanupがsensorChart.update()を呼ぶので、ここでは呼ばない
+            // もしこの関数が単独で呼ばれるなら、sensorChart.update('none'); が必要
+            // 今回はsetIntervalでchartUpdateTimerがupdateChartDataを呼び出すため、
+            // その後のupdateChartRangeAndCleanupでまとめて更新される
+            // ここでのsensorChart.update()は不要、かつエラーの原因になる可能性があるので削除
+            // sensorChart.update('none'); // ← この行を削除
         }
 
         // 定期的にグラフの表示範囲を更新し、古いデータを削除する関数
         function updateChartRangeAndCleanup() {
+            // sensorChartが初期化されていない場合は何もしない
+            if (!sensorChart) return; 
+
             const now = new Date().getTime(); // 現在のタイムスタンプ
             const cutoffTime = now - (CHART_DURATION_SECONDS * 1000); // 20秒前のタイムスタンプ
 
@@ -431,7 +443,6 @@
             }
             
             // グラフを更新
-            // データが追加されていなくても、X軸のスクロールを維持するために定期的に更新
             sensorChart.update('none');
         }
 
